--- a/templates/edit-vendor-bank.html
+++ b/templates/edit-vendor-bank.html
@@ -17,14 +17,16 @@
                     <h2 class="">Edit Vendor Bank Details</h2>
                 </div>
                 <div class="formbold-input-flex">
-                    <div id="vid" {% if form.vendor_id.errors %} class="error" {% endif %} hx-select="#vid"
+                    <div id="vid" hx-select="#vid"
                          hx-post="{% url 'webapp:edit-bank-details' acc_id=acc_id %}"
                          hx-trigger="blur from:find input" hx-taget="#vid">
                         <label class="formbold-form-label"> {{ form.vendor_id.label }}</label>
                         {% render_field form.vendor_id type="text" name="vendor_id" id="vendorid" class="formbold-form-input" %}
+                        {% if form.vendor_id.errors %}
                         {{ form.vendor_id.errors }}
+                        {% endif %}
                     </div>
-                    <div id="vname" {% if form.account_name.errors %} class="error" {% endif %} hx-select="#accountname"
+                    <div id="vname" hx-select="#accountname"
                          hx-post="{% url 'webapp:edit-bank-details' acc_id=acc_id %}"
                          hx-trigger="blur from:find input" hx-taget="#accountname">
                         <label class="formbold-form-label"> {{ form.account_name.label }}</label>
@@ -53,24 +55,24 @@
                 <div class="formbold-input-flex" id="bank_dropdown">
                     <div id="acc" {% if form.account_no.errors %} class="error" {% endif %}>
                         <label class="formbold-form-label">{{ form.account_no.label }} </label>
-                        {% render_field form.account_no type="text" name="account_no" id="account_no" class="formbold-form-input" %}
+                        {% render_field form.account_no type="text" name="account_no" id="account_no" readonly=True class="formbold-form-input" %}
                         {{ form.account_no.errors }}
                     </div>
                     <div>
                         <label class="formbold-form-label">Bank Name</label>
-                        {% render_field form.bank_name  type="text" name="bank_name" id="bank_name" class="formbold-form-input" %}
+                        {% render_field form.bank_name  type="text" name="bank_name" id="bank_name" class="formbold-form-input" readonly=True%}
 
                     </div>
                 </div>
                 <div class="formbold-input-flex " id="zicb_bank_details">
                     <div>
                         <label class="formbold-form-label">Branch Name</label>
-                        {% render_field form.branch  type="text" name="branch" id="branch" class="formbold-form-input" %}
+                        {% render_field form.branch  type="text" name="branch" id="branch" class="formbold-form-input" readonly=True%}
 
                     </div>
                     <div>
                         <label class="formbold-form-label">Sort Code</label>
-                        {% render_field form.sort_code  type="text" name="sort_code" id="sort_code" class="formbold-form-input" %}
+                        {% render_field form.sort_code  type="text" name="sort_code" id="sort_code" class="formbold-form-input" readonly=True %}
 
                     </div>
                 </div>
