--- a/templates/base2.html
+++ b/templates/base2.html
@@ -10,6 +10,7 @@
     {% block styles %}
         <script src="https://kit.fontawesome.com/5b1fb164c9.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
               type='text/css'>
@@ -27,7 +28,7 @@
 <div class="shadow rounded">
     <nav class="navbar navbar-secondary " style="background-color: #0B0B45;font-family: 'Roboto Slab',serif;">
         <div class="container">
-            <a href="" class="navbar-brand text-white px-2">Infratel-ZICB Payment Integration</a>
+            <a href="" class="navbar-brand text-white px-2">Infratel-ZICB Payment Integration Portal</a>
 
             <div>
                 <ul class="navbar-nav mr-auto flex-row ">
@@ -48,7 +49,8 @@
                         <a class="nav-link dropdown-toggle text-white" href="#"
                            role="button" data-bs-toggle="popover"
                            data-bs-placement="bottom" data-bs-html="true"
-                           data-bs-content="<a href='{% url 'webapp:logout' %}' style='text-decoration: none;'>Sign Out</a>"
+                           data-bs-content="<a href='{% url 'webapp:logout' %}' style='text-decoration: none;'>Sign Out</a>
+                                            "
                         >
                             {{ request.user.username }}</a>
 
@@ -62,17 +64,18 @@
 </div>
 {% block content %}{% endblock %}
 <footer class="footer pt-5">
-    <div class="text-center p-4" >
-       Copyright © 2023
+    <div class="text-center p-4">
+        Copyright © 2023
 
     </div>
     <!-- Copyright -->
 </footer>
 {% block scripts %}
     <script src="https://unpkg.com/htmx.org@1.8.6"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src=" https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script>
         document.querySelectorAll('.nav-link').forEach(link => {
             if (link.href === window.location.href) {
