--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
                     <div class="icon d-flex align-items-center justify-content-center">
                         <img src="{% static 'images/infratel_logo.jpg' %}" class="rounded-circle">
                     </div>
+                    <h3 class="text-center mb-4">Infratel-ZICB Payment Portal</h3>
                     <h3 class="text-center mb-4">Sign In</h3>
                     <form method="post" class="login-form" id="login-form">
                         {% csrf_token %}
@@ -52,7 +53,7 @@
                             <a href="{% url 'webapp:login' %}">
                                 <button type="submit" id="submit-button"
                                         class="form-control btn rounded submit px-3 text-white"
-                                        style="background-color: #0B0B45">Sign In
+                                        style="background-color: #0B0B45" >Sign In
                                 </button>
                             </a>
                         </div>
@@ -62,24 +63,7 @@
         </div>
     </div>
 </section>
-<script>
-    var username = document.getElementById('username');
-    var loginSubmit = document.getElementById("submit-button");
-    loginSubmit.addEventListener('click', () => {
-        fetch(`role/?username=${username.value}`)
-            .then(response => response.json())
-            .then(resp => {
-                console.log(resp.role)
-                if (resp.role.role === '002') {
-                    swal("OTP Sent");
-                }
-            })
-            .catch(error => {
-                // Handle any errors that occurred during the fetch request
-                console.error(error);
-            });
-    })
-</script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
 
