--- a/templates/partials/transactions/table.html
+++ b/templates/partials/transactions/table.html
@@ -1,14 +1,14 @@
 {% include  'partials/transactions/popup.html' %}
-<div class="card ">
+
 <div class="container pt-5" xmlns="http://www.w3.org/1999/html">
     <button onclick="scrollToTopOrBottom()" class="btn btn-outline-dark shadow" data-mdb-ripple-color="dark" style=" background:  #0B0B45; border-radius: 50%; position: fixed;right: 30px;top: 90%;transform: translateY(-50%);">
         <i class="bi bi-arrow-down-up text-white h5 "></i></button>
-    <div class="row mb-3 pt-3">
+    <div class="row mb-5 pt-3">
         <div class="col pt-1">
             <form action="">
                 <div class="input-group w-75">
                     <input type="text" class="form-control" id="search-input"
-                           placeholder="Search...">
+                           placeholder="Search..." readonly>
                     <button id="search-button" class="btn btn-outline-secondary bg-white border-start-0 border ms-n5"
                             type="button">
                         <i class="fa fa-search"></i>
@@ -18,8 +18,8 @@
                         <option class="text-muted">Filters</option>
                         <option value="amount">Amount</option>
                         <option value="date">Date</option>
-                        <option value="invoice_id">Transaction Number</option>
-                        <option value="vendor_id">Vendor Id</option>
+                        <option value="invoice_id">Invoice Number</option>
+                        <option value="vendor_id">Beneficiary Id</option>
                     </select>
 
                 </div>
@@ -38,10 +38,9 @@
                 {% endif %}
             </div>
         </div>
-
     </div>
-
-    <table class="table table-hover mt-5">
+<div class="shadow-sm p-4 ">
+    <table class="table table-hover ">
         <thead style="font-family: 'Roboto Slab', serif">
         <tr>
             <th scope="col"></th>
@@ -109,6 +108,6 @@
 
         </tbody>
     </table>
-    {% include 'partials/transactions/home-page-paginator.html' %}
 </div>
+    {% include 'partials/transactions/home-page-paginator.html' %}
 </div>
