--- a/templates/transaction-history.html
+++ b/templates/transaction-history.html
@@ -7,28 +7,36 @@
 {% endblock %}
 
 {% block content %}
+    {% include 'partials/transactions/date-selector-modal.html' %}
     <div class="container">
-     <button onclick="scrollToTopOrBottom()" class="btn btn-outline-dark shadow" data-mdb-ripple-color="dark" style=" background:  #0B0B45; border-radius: 50%; position: fixed;right: 30px;top: 90%;transform: translateY(-50%);">
-        <i class="bi bi-arrow-down-up text-white h5 "></i></button>
+        <button onclick="scrollToTopOrBottom()" class="btn btn-outline-dark shadow" data-mdb-ripple-color="dark"
+                style=" background:  #0B0B45; border-radius: 50%; position: fixed;right: 30px;top: 90%;transform: translateY(-50%);">
+            <i class="bi bi-arrow-down-up text-white h5 "></i></button>
         <h2 class="text-lg-center pt-4 pb-4" style="font-family: 'Roboto Slab',serif;"> Transaction History</h2>
         <div class="row mt-4 mb-4">
             <div class="col">
-                <div class="card">
+                <div class="card shadow-sm border-0 p-2">
                     <canvas id="lineGraph" style="height: 250px;"></canvas>
                 </div>
             </div>
-            <div class="col">
-                <div class="card">
+            <div class="col ">
+                <div class="card shadow-sm border-0 p-2">
                     <canvas id="barGraph" style="height: 250px;"></canvas>
                 </div>
             </div>
-
         </div>
         <div class="row">
             <div class="col">
-                <div class="card p-2">
+                <div class="card shadow-sm border-0 p-2">
+                    <div class="text-end">
+                        <button type="button" style="background-color: #121271; "
+                                class="btn mt-1 text-white btn-sm text-left"
+                                data-bs-toggle="modal"
+                                data-bs-target="#date-selector-modal">Generate Report
+                        </button>
+                    </div>
                     <table class="table table-hover mt-3 ">
-                        <thead >
+                        <thead>
                         <tr>
                             <th scope="col"></th>
                             <th scope="col">Date</th>
@@ -66,6 +74,22 @@
 {% endblock %}
 
 {% block extra-scripts %}
+    <script>
+        datepicker1 = document.getElementById('datepicker1')
+        datepicker2 = document.getElementById('datepicker2')
+
+        flatpickr(datepicker2, {
+            dateFormat: "d-m-Y"
+        });
+        flatpickr(datepicker1, {
+            dateFormat: "d-m-Y"
+        });
+    </script>
+    <script>
+        function hideModal() {
+            $('#date-selector-modal').modal('hide');
+        }
+    </script>
     <script src="{% static 'js/process_transaction.js' %}"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -74,7 +98,7 @@
             var dataPoints = [];
 
             {% for data in data_by_month %}
-                    dataPoints.push({{ data.data|default:0 }});
+                dataPoints.push({{ data.data|default:0 }});
             {% endfor %}
 
             var chart1 = new Chart(chr, {
